--- a/provisioning.yml
+++ b/provisioning.yml
@@ -22,3 +22,14 @@
         state: present
         update_password: on_create
 
+   -  name: 'Baixa o arquivo de instalacao do WordPress'
+      get_url:
+        url:  'https://wordpress.org/latest.tar.gz'
+        dest: '/tmp/wordpress.tar.gz'
+
+   -  name: 'Descompacta o wordpress'
+      unarchive:
+        src: '/tmp/wordpress.tar.gz'
+        dest: /var/www/
+        remote_src: yes
+      become: yes
