--- a/provisioning.yml
+++ b/provisioning.yml
@@ -1,13 +1,14 @@
 ---
-- hosts: all
+- hosts: database
   tasks:
+
    -  name: 'Instala pacotes do SO'
       apt:
-        name: ['php5', 'apache2', 'libapache2-mod-php5', 'php5-gd', 'libssh2-php', 'php5-mcrypt', 'mysql-server-5.6', 'python-mysqldb', 'php5-mysql']
+        name: ['mysql-server-5.6', 'python-mysqldb']
         state: latest
       become: yes
 
-   -  name: 'Cria o bando do MySQL'
+   -  name: 'Cria o banco no MySQL'
       mysql_db:
         name: wordpress_db
         login_user: root
@@ -22,9 +23,30 @@
         state: present
         update_password: on_create
 
+- hosts: wordpress
+  handlers:
+   -  name: restart apache
+      service:
+        name: apache2
+        state: restarted
+      become: yes      
+
+  tasks:
+   -  apt_repository:
+        repo: ppa:ondrej/php
+        update_cache: yes
+      become: yes
+
+
+   -  name: 'Instala pacotes do SO'
+      apt:
+        name: ['php5', 'apache2', 'libapache2-mod-php5', 'php5-gd', 'libssh2-php', 'php5-mcrypt', 'php5-mysql']
+        state: latest
+      become: yes
+
    -  name: 'Baixa o arquivo de instalacao do WordPress'
       get_url:
-        url:  'https://wordpress.org/latest.tar.gz'
+        url:  'https://br.wordpress.org/wordpress-5.0.11-pt_BR.tar.gz'
         dest: '/tmp/wordpress.tar.gz'
 
    -  name: 'Descompacta o wordpress'
@@ -33,3 +55,29 @@
         dest: /var/www/
         remote_src: yes
       become: yes
+
+   -  name: 'Copia arquivo Sample do Wordpress'
+      copy: 
+        src: '/var/www/wordpress/wp-config-sample.php'
+        dest: '/var/www/wordpress/wp-config.php'
+        remote_src: yes
+      become: yes
+
+   -  name: 'Configura o wp-config com as entradas do banco de dados'
+      replace: 
+        path: '/var/www/wordpress/wp-config.php'
+        regexp: "{{ item.regex }}"
+        replace: "{{ item.value }}"
+      with_items:
+        - { regex: 'nome_do_banco_de_dados_aqui', value: 'wordpress_db'}
+        - { regex: 'nome_de_usuario_aqui', value: 'wordpress_user'}
+        - { regex: 'senha_aqui', value: '12345'}   
+      become: yes
+
+   -  name: 'Configura Apache para servir o Wordpress'
+      copy:
+        src: 'files/000-default.conf'
+        dest: '/etc/apache2/sites-available/000-default.conf'
+      become: yes
+      notify:
+        - restart apache
